--- a/Reno.MVC/Views/Reports/_PartialNavTabsIndex.cshtml
+++ b/Reno.MVC/Views/Reports/_PartialNavTabsIndex.cshtml
@@ -66,3 +66,10 @@
         </div>
     </a>
 </li>
+
+<script>
+    $(document).ready(function () {
+        $('.nav-tabs a[href="' + "#tab-1" + '"]').tab('show');
+    });
+
+</script>
