--- a/Reno.MVC/Views/Shared/_Navigation.cshtml
+++ b/Reno.MVC/Views/Shared/_Navigation.cshtml
@@ -1,4 +1,5 @@
-﻿@*@using Microsoft.AspNetCore.Identity
+﻿@using System.Security.Claims;
+@*@using Microsoft.AspNetCore.Identity
 @using MS.DAL.Enum
 
 @inject UserManager<ApplicationUser> UserManager
@@ -27,8 +28,8 @@
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="clear">
                             <span class="block m-t-xs">
-                                <strong class="font-bold text-center block">Welcome Twitty</strong>
-                            </span> <span class="text-muted text-xs block text-center"><label>Admin</label> <b class="caret"></b></span>
+                                <strong class="font-bold text-center block">Welcome!</strong>
+                            </span> <span class="text-muted text-xs block text-center"><label style="font-size:1.5rem;" >@User.Identity.Name</label><b class="caret"></b></span>
                         </span>
                     </a>
                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
