--- a/Reno.MVC/Views/Shared/_TopNavbar.cshtml
+++ b/Reno.MVC/Views/Shared/_TopNavbar.cshtml
@@ -1,11 +1,21 @@
-﻿<div class="row ">
+﻿@using System.Security.Claims;
+@{
+    string label = "";
+    if (User.IsInRole("HealthCare"))
+        label = User.Claims.FirstOrDefault(x => x.Type == "unit").Value;
+
+    if (string.IsNullOrEmpty(label))
+        label = "Reno Care";
+}
+
+
+<div class="row ">
     <nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
         <div class=" col-md-12 navbar-header">
             <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
             <div role="search" class="navbar-form-custom" method="post" action="" style="padding-top: 5px;">
                 <label class="control-label brand-color font-bold font-18">
-                    Saudi National Registry for Neuroimmunology CNS Demyelinating
-                    Disorders – CRF
+                    @label
                 </label>
             </div>
         </div>
